# ProtoThrive2

./: .dev.vars  .env.example  .gitignore  .npmrc  .pylintrc  .replit  ADVANCED_FEATURES_REPORT.md  CLAUDE.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_OPTIMIZATION_REPORT.md  COMPLIANCE_AUDIT_REPORT.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CREWAI_MASSIVE_AUDIT_REPORT.md  CREWAI_MASSIVE_FIXES_REPORT.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOY_NOW.md  E2E_TEST_RESULTS.md  FINAL_100_PERCENT_ACHIEVEMENT.md  FINAL_100_PERCENT_CELEBRATION.md  FINAL_100_PERCENT_REPORT.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_DEPLOYMENT_AUDIT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_MASSIVE_AUDIT_AND_FIXES_REPORT.md  FINAL_PROGRESS_REPORT.md  FINAL_SUCCESS_REPORT.md  FINAL_THERMONUCLEAR_SUCCESS_REPORT.md  IMPLEMENTATION_PROGRESS.md  IMPOSSIBLE_1000_PERCENT_ACHIEVEMENT.md  INSTANT_DEPLOY.sh  INTEGRATION_COMPLETE.md  LAUNCH_GUIDE_NO_404_ERRORS.md  LAUNCH_PROTOTHRIVE.bat  LAUNCH_PROTOTHRIVE.ps1  LAUNCH_PROTOTHRIVE.sh  LAUNCH_READINESS_REPORT.md  Makefile  PERFORMANCE_OPTIMIZATION_REPORT.md  (+49 more)
.emergent/: emergent.yml  (+1 more)
enterprise-agent/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH_CHECK.md  Makefile  README.md  SECURITY.md  USAGE.md  agent.ps1  agent_cli.py  agent_orchestrator_recovered.py  agents.md  check_launch.ps1  conftest.py  interactive_agent.py  pre-commit-config.yaml  pyproject.toml  readiness_log.txt  requirements.txt  sample_input.txt  setup_env.py  smoke_test.py  tmp_memory_patch.py  tmp_script.py  tmp_write_tools.py
enterprise-agent/.github/: release.yml
(+409 files in other folders)
